# authentication_system

./: .env  Cargo.toml  README.md
handle-errors/src/: lib.rs
mydatabase.db/: IDENTITY  LOG
src/: lib.rs  main.rs  store.rs  utilities.rs
src/models/: mod.rs  session.rs  users.rs
src/routes/: login_user.rs  mod.rs
src/tests/: test.rs
