[package]
name = "authentication_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde-email = "3.0.0"
surrealdb = "1.0.0"
rust-argon2 = "1.0"
paseto = "2.0"
chrono = "0.4.19"
handle-errors = { path = "handle-errors", version = "0.1.0" }
rand = "0.8"
tokio = "1.34.0"
once_cell = "1.19.0"
dotenv = "0.15"
